--- a/composer.json
+++ b/composer.json
@@ -38,10 +38,7 @@
             "@php artisan package:discover --ansi"
         ],
         "post-update-cmd": [
-            "@php artisan vendor:publish --tag=laravel-assets --ansi --force",
-            "php artisan clear-compiled",  
-            "php artisan optimize",  
-            "chmod -R 777 public/" 
+            "@php artisan vendor:publish --tag=laravel-assets --ansi --force"
         ],
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
