--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,6 @@
 {
     "/js/ajax.js": "/js/ajax.js",
     "/js/main.js": "/js/main.js",
+    "/css/dt.css": "/css/dt.css",
     "/css/custom.css": "/css/custom.css"
 }
